# FindDiffTool

./: .gitignore  ai.py  ai_client.py  banana.py  circle_provider.py  editor.py  fmt.cmd  gemini.py  graphics.py  img.qrc  img_rc.py  main.py  models.py  package-win.ps1  package.sh  pyproject.toml  readme.org  requirements.txt  run.sh  scenes.py  secret_key.py  utils.py
.github/workflows/: build.yml
